# internal/core/api/v1/auth/response/login_response.go
@@ -3,13 +3,13 @@ package response
 import "github.com/ljj/gugu-api/internal/core/domain/auth"
 
 type Login struct {
-	User    User    `json:"user"`
-	Session Session `json:"session"`
+	User   User   `json:"user"`
+	Tokens Tokens `json:"tokens"`
 }
 
 func NewLogin(source auth.LoginResult) Login {
 	return Login{
-		User:    NewUser(source.User),
-		Session: NewSession(source.Session),
+		User:   NewUser(source.User),
+		Tokens: NewTokens(source.Tokens),
 	}
 }
