# internal/core/api/v1/auth/response/register_email_response.go
@@ -4,14 +4,14 @@ import "github.com/ljj/gugu-api/internal/core/domain/user"
 
 type RegisterEmail struct {
 	User                   User   `json:"user"`
-	VerificationToken      string `json:"verification_token,omitempty"`
+	VerificationCode       string `json:"verification_code,omitempty"`
 	VerificationDispatched bool   `json:"verification_dispatched"`
 }
 
-func NewRegisterEmail(user user.User, verificationToken string, verificationDispatched bool) RegisterEmail {
+func NewRegisterEmail(user user.User, verificationCode string, verificationDispatched bool) RegisterEmail {
 	return RegisterEmail{
 		User:                   NewUser(user),
-		VerificationToken:      verificationToken,
+		VerificationCode:       verificationCode,
 		VerificationDispatched: verificationDispatched,
 	}
 }
